--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "converter",
   "version": "0.1.0",
   "private": true,
@@ -27,7 +26,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-
     "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
@@ -47,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.4.5"
   }
 }
